# $Id$

2009-03-24	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveDate.class.php: fixed import of empty values.

	* core/FormPrimitivesDateTest.class.php: useful tests added.

2009-03-24	Denis M. Gabaidulin

	* main/Utils/ArrayUtils.class.php: isEmpty(). Check for assoc
	single dimension array.

2009-03-23	Denis M. Gabaidulin

	* main/Utils/CommandLine/ArgumentBuilder.class.php. Simple builder to hide
	complex interface.

	* main/Utils/CommandLine/Argument.class.php. Primitive member added.

2009-03-22	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveImage.class.php: getMaxWidth(),
	getMinWidth(), getMaxHeight(), getMinHeight() added.

	* core/Logic/BinaryExpression.class.php: getLeft(), getRight(),
	getLogic() added.

	* core/OSQL/SQLChain.class.php: getChain(), getLogic() added.

	* test/core/FormPrimitivesDateTest.class.php: test case on PrimitiveDate
	added.

2009-03-19	Denis M. Gabaidulin

	* main/Base/Collection.class.php. Useful accessors added.

	* main/Utils/CommandLine/*.class.php. Simple command line args parser
	based on getopt().

2009-03-17	Denis M. Gabaidulin

	* main/Flow/HttpRequest.class.php: setServerVar() added.

	* main/Utils/DateUtils.class.php: alignToSeconds() added.
	Function used to align date for any interval.

2009-03-16	Denis M. Gabaidulin

	* core/Form/Filters/Json{Encoder|Decoder}Filter.class.php: added
	and tested.

2009-03-10	Vladlen Y. Koshelev

	* core/DB/PostgresError.class.php: removed internal numeric representation
	of error code.

	* core/DB/PgSQL.class.php,
	core/Exceptions/PostgresDatabaseException.class.php: PostgreSQL-specific
	exception containing string error code within (PostgresError constant). 

2009-03-06	Sergey S. Sergeev

	* main/Flow/MethodMappedController.class.php: import attached vars to form.
	
	* core/Base/Date.class.php, core/Base/Timestamp.class.php: bugfixed.

2009-03-06	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php: actualImportValue()
	hook added.
